Git_WGBH_QC/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>payment_method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Funds Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutual fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Deduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONVIO American Express DO NOT SELECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONVIO Discover DO NOT SELECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONVIO Master Card DO NOT SELECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONVIO Visa DO NOT SELECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic Charge Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimbia American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimbia Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimbia Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimbia VISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MasterCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Payment (Complimentary)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>payment_method_value__c</fullName>
        <label>Payment Method Value</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payment_number__c</fullName>
        <label>Installment Number</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>payments_in_schedule__c</fullName>
        <description>Payments In Schedule</description>
        <inlineHelpText>Payments In Schedule</inlineHelpText>
        <label>Payments In Schedule</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pledge_amount__c</fullName>
        <description>Pledge Amount</description>
        <inlineHelpText>Pledge Amount</inlineHelpText>
        <label>Pledge Amt Delete</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pledge_number__c</fullName>
        <description>Pledge Number</description>
        <externalId>true</externalId>
        <inlineHelpText>Pledge Number</inlineHelpText>
        <label>TA Pledge Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pledge_status__c</fullName>
        <description>Pledge Status</description>
        <inlineHelpText>Pledge Status</inlineHelpText>
        <label>Pledge Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pledge_status_value__c</fullName>
        <description>Pledge Status Valu</description>
        <inlineHelpText>Pledge Status Valu</inlineHelpText>
        <label>Pledge Status Value</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prior_activity__c</fullName>
        <description>Prior Activity</description>
        <inlineHelpText>Prior Activity</inlineHelpText>
        <label>Prior Activity</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prior_giving_level_amt__c</fullName>
        <description>Prior Giving Level Amt</description>
        <inlineHelpText>Prior Giving Level Amt</inlineHelpText>
        <label>Prior Giving Level Amt</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>program__c</fullName>
        <label>Program</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project__c</fullName>
        <label>Project</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_del__c</fullName>
        <label>TA Project</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purpose__c</fullName>
        <label>TA Purpose</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recognition_date__c</fullName>
        <description>Recognition Date</description>
        <inlineHelpText>Recognition Date - This is used with Stock</inlineHelpText>
        <label>Recognition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>recognized_gift_amount__c</fullName>
        <description>Recognized Gift Amount</description>
        <inlineHelpText>Recognized Gift Amount</inlineHelpText>
        <label>Recognized Gift Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>reg_id__c</fullName>
        <description>Reg Id - May hijack this field to tlk to TA</description>
        <inlineHelpText>Reg Id</inlineHelpText>
        <label>Reg Id</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sale_date__c</fullName>
        <description>Sale Date - This is used with Stock</description>
        <inlineHelpText>Sale Date</inlineHelpText>
        <label>Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sale_value__c</fullName>
        <description>Sale Value - This is used with Stock</description>
        <inlineHelpText>Sale Value</inlineHelpText>
        <label>Sale Value</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>schedule_start_date__c</fullName>
        <description>Schedule Start Date</description>
        <inlineHelpText>Schedule Start Date</inlineHelpText>
        <label>Schedule Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>soft_credit_type__c</fullName>
        <label>Soft Credit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Generic Soft Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Matched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift from Related Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Pledge Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution from BFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution from Foundation/Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Through Foundation (ZTRUST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Benefits received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>soft_credit_type_value__c</fullName>
        <description>Soft Credit Type</description>
        <inlineHelpText>Soft Credit Type</inlineHelpText>
        <label>Soft Credit Type Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>solicitor__c</fullName>
        <label>Solicitor</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>source__c</fullName>
        <label>TA Source Code</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>station_support__c</fullName>
        <description>Station Support</description>
        <inlineHelpText>Station Support  Affiliation</inlineHelpText>
        <label>Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>BO (Institutional Giving)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC (Radio Classical)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD (Radio General)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN (Radio News)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TC (TV and Radio Classical)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TN (TV and Radio News)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US (Unspecified)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>stock_gift_id__c</fullName>
        <description>Stock Gift Id</description>
        <inlineHelpText>Stock Gift Id</inlineHelpText>
        <label>Stock Gift Id</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>systemHouseholdContactRoleProcessor__c</fullName>
        <inlineHelpText>Controls if Household contact roles are created for Opportunities</inlineHelpText>
        <label>_SYSTEM: HOUSEHOLD CONTACT ROLEPROCESSOR</label>
        <picklist>
            <picklistValues>
                <fullName>All Opportunities</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Opportunities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ta_campaign__c</fullName>
        <label>TA Campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ta_campaign_value__c</fullName>
        <label>TA Campaign Value</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ta_fiscal_month__c</fullName>
        <label>TA Fiscal Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ta_fiscal_year__c</fullName>
        <label>TA Fiscal Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tam_date_check__c</fullName>
        <formula>gift_date__c - schedule_start_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>tam date check</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>technique__c</fullName>
        <label>Technique</label>
        <picklist>
            <picklistValues>
                <fullName>Call to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>900 #</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting with account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Note from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Note to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitation sent to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsolicited Call for Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Technique to update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY technique to convert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Strategy Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Mail from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Mail to Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect Name Acquired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Pull</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>technique_value__c</fullName>
        <label>Technique Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transaction_type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>transaction_type_value__c</fullName>
        <description>Transaction Type</description>
        <inlineHelpText>Transaction Type</inlineHelpText>
        <label>Transaction Type Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Proposals_Pledges_WGBY</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>source__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>source__c</field>
            <operation>startsWith</operation>
            <value>Y</value>
        </filters>
        <label>All Proposals/Pledges WGBY</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>Failed_EFT_Transactions</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>payment_amount__c</columns>
        <columns>payment_method__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>schedule_start_date__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Revenue_Date__c</columns>
        <columns>Gift_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>FAIL</value>
        </filters>
        <filters>
            <field>payment_method__c</field>
            <operation>contains</operation>
            <value>Electronic Funds Transfer</value>
        </filters>
        <label>Failed EFT Transactions</label>
    </listViews>
    <listViews>
        <fullName>GDTNULL</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Status__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Gift_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Gift_Date_Time__c</field>
            <operation>equals</operation>
        </filters>
        <label>GDT NULL</label>
    </listViews>
    <listViews>
        <fullName>GiftstoProcess</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Status__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Gift_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>PROCESS</value>
        </filters>
        <label>Gifts to Process</label>
    </listViews>
    <listViews>
        <fullName>Giving_Update_View</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>Benefit_Exists__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>payment_method__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Campaign_Name__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.FISCAL_YEAR</columns>
        <columns>OPPORTUNITY.FISCAL_QUARTER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92797585,92796936,92791522,92797330,92789850,92793109,92789162,92786296,92788753</value>
        </filters>
        <label>Giving Update View</label>
    </listViews>
    <listViews>
        <fullName>Giving_Update_View_SME</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8) AND 9</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>pledge_number__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>payment_amount__c</columns>
        <columns>Charge_Card_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>91495475,92245478,92780229,92780248,92780433,92780473,92780740,92780867</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92781094,92781290,92781771,92781852,92781989,92782350,92782483,92782979</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92783406,92783495,92783541,92783849,92783955,92784405,92784407,92784408</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92784413,92784416,92784450,92784563,92784564,92786064,92786429,92787774</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92789320,92789519,92790178,92791033,92791263,92791734,92792259,92792442</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92792860,92793377,92793571,92793731,92795706,92796058,92837082,92850373</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92855150,92863390,92863391,92863392,92947819,92993809,92993816,93012675</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>,93012677,93012819,93045070,93048359,93072700,93142098,93245604</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Pledged</value>
        </filters>
        <label>Giving Update View - SME</label>
    </listViews>
    <listViews>
        <fullName>Giving_Update_View_SME2</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8) AND 9</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>pledge_number__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>payment_amount__c</columns>
        <columns>Charge_Card_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>91495475,92245478,92780229,92780248,92780433,92780473,92780740,92780867</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92781094,92781290,92781771,92781852,92781989,92782350,92782483,92782979</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92783406,92783495,92783541,92783849,92783955,92784405,92784407,92784408</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92784413,92784416,92784450,92784563,92784564,92786064,92786429,92787774</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92789320,92789519,92790178,92791033,92791263,92791734,92792259,92792442</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92792860,92793377,92793571,92793731,92795706,92796058,92837082,92850373</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92855150,92863390,92863391,92863392,92947819,92993809,92993816,93012675</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>93012677,93012819,93045070,93048359,93072700,93142098,93245604</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Pledged</value>
        </filters>
        <label>Giving Update View - SME2</label>
    </listViews>
    <listViews>
        <fullName>Giving_Update_View_SV</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5) AND 6</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>pledge_number__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>payment_amount__c</columns>
        <columns>Charge_Card_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Pledged</value>
        </filters>
        <label>Giving Update View - SV</label>
    </listViews>
    <listViews>
        <fullName>Giving_Update_View_Suz</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5) AND 6</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>pledge_number__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>payment_amount__c</columns>
        <columns>Charge_Card_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92780457,92781227,92782942,92794894,92838545,92792392,92837006,92780596</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92801538,92994225,92781273,92780448,92782537,93049652,92783759,92780257</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92781600,92782333,92796105,92837002,92770816,92786735,92795139,92993559</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92782076,92780864,93040547,92784301,92796320,92782800,93212733,92795979</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92796450,92900582,92770816,92780257</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Pledged</value>
        </filters>
        <label>Giving Update View - Suz</label>
    </listViews>
    <listViews>
        <fullName>Giving_Update_View_TA</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>Benefit_Exists__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>payment_method__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Campaign_Name__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.FISCAL_YEAR</columns>
        <columns>OPPORTUNITY.FISCAL_QUARTER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>,92785722,92794659,92792075,92795778,93136777,92786763,93043300,92787610</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Pledged</value>
        </filters>
        <label>Giving Update View TA</label>
    </listViews>
    <listViews>
        <fullName>Giving_Update_View_TAM</fullName>
        <booleanFilter>(1 OR 2 OR 3) AND 4</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>pledge_number__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>payment_amount__c</columns>
        <columns>Charge_Card_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92786735,92792392,92794894,92796450</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92795139,92796105,92796320</value>
        </filters>
        <filters>
            <field>pledge_number__c</field>
            <operation>equals</operation>
            <value>92801538,92838545,93212733</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Pledged</value>
        </filters>
        <label>Giving Update View - TAM</label>
    </listViews>
    <listViews>
        <fullName>InstallmentGifts</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>source__c</columns>
        <columns>OPPORTUNITY.FISCAL_PERIOD</columns>
        <columns>OPPORTUNITY.FISCAL_YEAR</columns>
        <columns>TaTransactions_Id__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>project__c</columns>
        <columns>OPPORTUNITY.FISCAL_QUARTER</columns>
        <columns>gift_value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>source__c</field>
            <operation>startsWith</operation>
            <value>H</value>
        </filters>
        <filters>
            <field>gift_kind__c</field>
            <operation>equals</operation>
            <value>Installment</value>
        </filters>
        <label>Installment Gifts</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <recordTypes>
        <fullName>Annual</fullName>
        <active>true</active>
        <businessProcess>Annual Process</businessProcess>
        <description>Annual Membership donations</description>
        <label>Annual</label>
    </recordTypes>
</CustomObject>